[package]
name = "fast-pbf-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.11", features = ["derive", "env"] }
log = "0.4.20"
osmpbfreader = "0.16.1"
poem = "1.3.59"
rstar = { version = "0.11.0", features = ["serde"] }
scanf = "1.2.1"
serde = "1.0.193"
tokio = { version = "1.35.1", features = ["full"] }
tracing-subscriber = "0.3.18"
